--- a/generator/templates/generator/generated.html
+++ b/generator/templates/generator/generated.html
@@ -3,6 +3,6 @@
 <div class='text-center'>
     <h1>Generated Password</h1>
     <h2 class="alert alert-success">{{password}}</h2>
-    <button class="btn btn-warning"><a href="{% url 'home'%}">Home</a></button>
+    <a href="{% url 'home'%}"><button class="btn btn-warning">Home</button></a> 
 </div>
 {% endblock content %}
